--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>dist/favicon.ico">
-    <title>demo</title>
+    <title>Whalsper | 呓语鲸人 - by DebraJohn</title>
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
