--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <div class="footer">© 2020 DebraJohn</div>
+    <footer>©2020 designed & developed by DebraJohn</footer>
   </body>
 </html>
